up to date logo

--- a/index.html
+++ b/index.html
@@ -72,6 +72,17 @@
         <img src="/ImagePage1/Logo Rise1.png" alt="7">
         <img src="/ImagePage1/logo Rise 2.png" alt="8">
      </div>
+
+     <div class="logo">
+        <img src="/ImagePage1/Logo Rise1.png" alt="1">
+        <img src="/ImagePage1/logo Rise 2.png" alt="2">
+        <img src="/ImagePage1/Logo Rise1.png" alt="3">
+        <img src="/ImagePage1/logo Rise 2.png" alt="4">
+        <img src="/ImagePage1/Logo Rise1.png" alt="5">
+        <img src="/ImagePage1/logo Rise 2.png" alt="6">
+        <img src="/ImagePage1/Logo Rise1.png" alt="7">
+        <img src="/ImagePage1/logo Rise 2.png" alt="8">
+     </div>
 </div>
 
 <div class="About">
